--- a/find.html
+++ b/find.html
@@ -71,7 +71,7 @@
             <h6 class="open-post__hashtags">#bts#army#friends</h6>
             <div class="open-post__members">
               <img
-                src="file:///C:/Users/User/OneDrive/Desktop/%EB%B0%95%EC%84%B1%ED%98%B8/%EC%82%AC%EC%A7%84%EB%AA%A8%EC%9D%8C/%EC%96%91%EB%A8%B8%EB%A6%AC.jpg"
+                src="https://i.pinimg.com/originals/52/b3/9c/52b39cd0e5b9499fc2e0f3ec7184202f.jpg"
               />
               <span class="open-post__member-count">802 members</span>
               <div class="divider"></div>
