--- a/more.html
+++ b/more.html
@@ -38,11 +38,11 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="C:\Users\User\OneDrive\Desktop\박성호\사진모음\양머리.jpg"
+            src="https://i.pinimg.com/originals/52/b3/9c/52b39cd0e5b9499fc2e0f3ec7184202f.jpg"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">Nicolas</h4>
+            <h4 class="user-component__title">Puppy</h4>
             <h6 class="user-component__subtitle">+1 010 4714 4961</h6>
           </div>
         </div>
