--- a/chat.html
+++ b/chat.html
@@ -41,10 +41,10 @@
       <div class="chats__timestamp">Tuesday, January 14, 2023</div>
       <div class="message-row message-row">
         <img
-          src="file:///C:/Users/User/OneDrive/Desktop/%EB%B0%95%EC%84%B1%ED%98%B8/%EC%82%AC%EC%A7%84%EB%AA%A8%EC%9D%8C/%EC%96%91%EB%A8%B8%EB%A6%AC.jpg"
+          src="https://i.pinimg.com/originals/52/b3/9c/52b39cd0e5b9499fc2e0f3ec7184202f.jpg"
         />
         <div class="message-row__content">
-          <span class="message__author">Nicolas</span>
+          <span class="message__author">Sungho</span>
           <div class="message__info">
             <span class="message__bubble">Hi!</span>
             <span class="message__time">21:27</span>
